<resources>
    <string name="app_name">Lopawlty Inventory</string>

    <!--Menu options-->
    <string name="menu_insert">Insert new product</string>
    <string name="menu_list">List products</string>
    <string name="menu_edit">Edit product</string>
    <string name="menu_delete">Remove product</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--insert and edit fragment strings-->
    <string name="insertProductFragmentTitle">Insert Product</string>
    <string name="editProductFragmentTitle">Edit Product</string>
    <string name="productIdLabel">Product Id</string>
    <string name="productNameLabel">Product Name</string>
    <string name="productQuantityLabel">Product Quantity in Stock</string>
    <string name="productPriceLabel">Product Price</string>
    <string name="productCategoryLabel">Product Category</string>
    <string name="productDescriptionLabel">Product Description</string>
    <string name="productAddressLabel">Address</string>
    <string name="productPostalCodeLabel">Postal Code</string>
    <string name="insertButtonLabel">Insert Product</string>
    <string name="editButtonLabel">Update Product</string>
    <string name="findEditButtonLabel">Find</string>
    <string name="dogCategoryLabel">Dog</string>
    <string name="fishCategoryLabel">Fish</string>
    <string name="birdCategoryLabel">Bird</string>
    <string name="catCategoryLabel">Cat</string>

    <!--custom dialog strings-->
    <string name="positive_dialog_button_text">Ok</string>
    <string name="negative_dialog_button_text">Close</string>

    <!--error and success message strings-->
    <string name="errorNoRecord">No Records</string>
    <string name="errorFieldError">Please enter all fields with the correct format.</string>
    <string name="errorDb">Database error.</string>
    <string name="errorNoProductWithId">No product found with given id.</string>
    <string name="successAddedRecord">Successfully added record!</string>
    <string name="successEditedRecord">Successfully edited record!</string>


    <!-- Button names -->
    <string name="btnSeeMore">See More</string>

    <!--Product Card -->
    <string name="lblProdtId">Product ID:</string>
    <string name="lblProdtQty">Product Qty:</string>

    <!--Product List View-->
    <string name="lblFilter">Search your product name</string>

    <!-- Product delete view-->
    <string name="DeleteTittle">Delete Product</string>
    <string name="lblDeleteSearch">Enter id of product you want to delete</string>
    <string name="deleteBtn">Delete</string>

    <!-- product detail view-->
    <string name="productId">Product ID: </string>
    <string name="productQty">Quantity In Stock: </string>
    <string name="productPrice">Unit Price: </string>
    <string name="productCtg">Category: </string>
    <string name="productDesc">Description: </string>
    <string name="productAdd">Address: </string>
    <string name="productPostal">Postal Code: </string>


</resources>