<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertFragment">

    <TextView
        android:id="@+id/FragNewProductTitle"
        style="@style/ProductFormTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/insertProductFragmentTitle" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/FragNewProductTitle"
        android:layout_gravity="top"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/productNameRelativeLayout"
                style="@style/ProductFormRelativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/productNameLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/productPriceRelativeLayout"
                style="@style/ProductFormRelativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/productPriceLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productPriceEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/productDescriptionRelativeLayout"
                style="@style/ProductFormRelativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/productDescriptionLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productDescriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="3" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/productCategoryRelativeLayout"
                style="@style/ProductFormRelativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/productCategoryInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/productCategoryLabel"
                    app:boxBackgroundColor="@color/light_grey"
                    app:boxStrokeColor="@color/blue_dark">

                    <AutoCompleteTextView
                        android:id="@+id/productCategoryAutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/productQuantityRelativeLayout"
                style="@style/ProductFormRelativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/productQuantityLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productQuantityEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/productAddressRelativeLayout"
                style="@style/ProductFormRelativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/productAddressLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productAddressEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="3" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/productPostalCodeRelativeLayout"
                style="@style/ProductFormRelativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/productPostalCodeLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productPostalCodeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>


            <Button

                android:id="@+id/insertButton"
                style="@style/ProductFormRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/productPostalCodeRelativeLayout"
                android:text="@string/insertButtonLabel" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>