<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/topViewLinearLayout">


        <TextView
            android:id="@+id/FragNewProductTitle"
            style="@style/ProductFormTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/editProductFragmentTitle" />


        <LinearLayout
            android:id="@+id/editIdFormLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/productIdLabel"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/productIdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>
            <Button

                android:id="@+id/editProductFindButton"
                style="@style/ProductFormRelativeLayout"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/productPostalCodeRelativeLayout"
                android:text="@string/findEditButtonLabel" />
        </LinearLayout>


    </LinearLayout>

        <ScrollView
            android:id="@+id/editProductFormScrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/topViewLinearLayout"
            android:layout_gravity="top"
            android:layout_marginTop="130dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/productNameRelativeLayout"
                    style="@style/ProductFormRelativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/productNameLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/productPriceRelativeLayout"
                    style="@style/ProductFormRelativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/productPriceLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productPriceEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/productDescriptionRelativeLayout"
                    style="@style/ProductFormRelativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/productDescriptionLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productDescriptionEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lines="3" />

                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/productCategoryRelativeLayout"
                    style="@style/ProductFormRelativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/productCategoryInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/productCategoryLabel"
                        app:boxBackgroundColor="@color/light_grey"
                        app:boxStrokeColor="@color/blue_dark">

                        <AutoCompleteTextView
                            android:id="@+id/productCategoryAutoCompleteTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/productQuantityRelativeLayout"
                    style="@style/ProductFormRelativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/productQuantityLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productQuantityEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/productAddressRelativeLayout"
                    style="@style/ProductFormRelativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/productAddressLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productAddressEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lines="3" />

                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/productPostalCodeRelativeLayout"
                    style="@style/ProductFormRelativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/productPostalCodeLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productPostalCodeEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>


                <Button

                    android:id="@+id/updateButton"
                    style="@style/ProductFormRelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/productPostalCodeRelativeLayout"
                    android:text="@string/editButtonLabel" />

            </LinearLayout>

        </ScrollView>


</FrameLayout>