<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                style="@style/ProductName"
                />

            <LinearLayout
                android:id="@+id/layProdId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/productIdLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ProductLabel"
                    android:text="@string/productId"/>
                <TextView
                    android:id="@+id/productId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layProdQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/productQtyLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ProductLabel"
                    android:text="@string/productQty"/>
                <TextView
                    android:id="@+id/productQty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layProdPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/productPriceLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ProductLabel"
                    android:text="@string/productPrice"/>
                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layProdCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/productCatLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ProductLabel"
                    android:text="@string/productCtg"/>
                <TextView
                    android:id="@+id/productCat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layProdAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/productAddLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ProductLabel"
                    android:text="@string/productAdd"/>
                <TextView
                    android:id="@+id/productAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layProdPostal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/productPostalLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ProductLabel"
                    android:text="@string/productPostal"/>
                <TextView
                    android:id="@+id/productPostal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layProdDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/productDesLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ProductLabel"
                    android:text="@string/productDesc"/>
                <TextView
                    android:id="@+id/productDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>