<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:paddingTop="10dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/productImg"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <LinearLayout
            style="@style/ProductCardContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtProductName"
                style="@style/ProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblProductId"
                    style="@style/ProductLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblProdtId" />
                <TextView
                    android:id="@+id/txtProductId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblProductQty"
                    style="@style/ProductLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblProdtQty" />
                <TextView
                    android:id="@+id/txtProductQty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/seeMoreButton"
                style="@style/seemore_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtProductQty"
                android:text="@string/btnSeeMore" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>